<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AutoClicker Pro</string>
    <string name="accessibility_service_description">This service allows AutoClicker to perform automatic click gestures on your screen. Enable this to start auto-clicking.</string>
    <string name="start_clicking">Start Clicking</string>
    <string name="stop_clicking">Stop Clicking</string>
    <string name="click_interval">Click Interval (ms)</string>
    <string name="target_x">Target X Position</string>
    <string name="target_y">Target Y Position</string>
    <string name="enable_overlay">Enable Overlay</string>
    <string name="permission_required">Permission Required</string>
    <string name="overlay_permission_message">Overlay permission is required to show the click indicator and control panel over other apps.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="accessibility_permission_message">Accessibility service permission is required to perform automatic clicks.</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="vibration_feedback">Vibration Feedback</string>
    <string name="show_click_indicator">Show Click Indicator</string>
    <string name="random_offset">Random Offset (pixels)</string>
    <string name="unlimited_clicks">Unlimited</string>
    <string name="click_count">Click Count</string>
    <string name="status_running">AutoClicker is running</string>
    <string name="status_stopped">AutoClicker is stopped</string>
    <string name="notification_channel_name">AutoClicker Service</string>
    <string name="notification_channel_description">Shows when AutoClicker is actively clicking</string>
</resources>
